--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 14
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --force
      
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
