--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14  # Update to Node.js version 14 or higher
+      - name: Install dependencies
+        run: yarn init 
 
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
