--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - name: Debug Info
+        run: |
+          echo "SONAR_TOKEN: $SONAR_TOKEN"
+          echo "SONAR_HOST_URL: $SONAR_HOST_URL"
+          docker --version
+
