--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectkey=npm
-sonar.organization=devopsint
-sonar.source=.
+sonar.projectKey=npm
+sonar.organization=hazemhashem881
+sonar.sources=.
